--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/xsksmt389/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482711.md#1" target="_blank">陈思敏：2020美国大选另类指标花落谁家</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482711.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-632862550-600x400-150x120.jpg" align ="left"></a>现在距11月3日美国总统大选日越来越近，表面上川普和拜登呈现五五波态势，舆论也不乏热议美中各有一个指数与传统民调大不相同。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 7:41 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482666.md#1" target="_blank">颜纯钩：拜登电脑门，选情凶多吉少</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482666.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-84379588-600x400-1-150x120.jpg" align ="left"></a>离美国总统大选只剩不到二十天，突然爆出拜登儿子的电脑丑闻。这件事当然是特朗普阵营的大毛笔，事件内幕早在朱利安尼手上，一直拖，拖到今日才爆出来，因为只有留到临战时刻，打击力才最致命。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 5:52 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482644.md#1" target="_blank">常忍：美国斩断中共的“大外宣”红色链</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482644.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/1806110826482525-600x400-1-150x120.jpg" align ="left"></a>二零二零年十月十五日，美国国务卿蓬佩奥（Michael Pompeo）表示，“孔子学院”（Confucius Institute）伪装成文化交流与教导中文，实质为中共的宣传组织，不应该存在于美国教育机构内，他要求从幼稚园、高中（K-12）到大学的每所学校，今年底前必须关闭“孔子学院”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 4:18 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482393.md#1" target="_blank">田云: 脸书推特禁传拜登丑闻 轩然大波的背后</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482393.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-96282164-150x120.jpg" align ="left"></a>10月15日早，朱利安尼发推表示：“从亨特．拜登的电脑硬盘中取得的电邮显示，乔．拜登在关于布瑞斯玛公司和更多的事情上撒谎。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 4:10 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482554.md#1" target="_blank">阿伦：谷歌、推特叩头中共的一个原因</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482554.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1024855232-600x400-150x120.jpg" align ="left"></a>我对AI有一定的了解，曾经花了1年时间研究、学习AI算法，做过一些试验，基本了解AI的思维模式。所以，我想说一个不了解AI的人，可能想不到的一个原因。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 3:59 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482512.md#1" target="_blank">谢燕益：法轮功学员任海飞案之无罪法律意见书</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482512.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/2020-10-8-i084056_03-150x120.jpg" align ="left"></a>我是中华人民共和国公民谢燕益，受当事人任海飞家属的委托根据《中华人民共和国宪法》第四十一条、《中华人民共和国刑事诉讼法》第三十三条之规定，担任其涉嫌破坏法律实施一案的辩护人及申诉控告代理人。本代理人通过了解相关案情以及对相关法律进行分析，认为由甘井子公安分局对任海飞刑事立案采取强制措施甘井子区检察院批捕一案是甘井子区公.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 2:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482443.md#1" target="_blank">【网海拾贝】蓬佩奥：年底前须关闭所有孔子学院</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482443.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1097914356-600x400-150x120.jpg" align ="left"></a>综合媒体报导，蓬佩奥15日接受多家媒体电话访问，谈到美国校园内的孔子学院问题，他指孔子学院实际为中共政府的重要宣传工具，致力在全球教育发挥影响力，为中共政府说好话，这是无法接受的，因此要求美国孔子学院年底前全部关闭。蓬佩奥强调，国务院要求包含高中与幼儿园到12年级（K-12）的各级学校，在年底前关闭孔子学院，而孔子学院.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 2:04 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481915.md#1" target="_blank">钟原：欧盟发起欧中贸易战的信号</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481915.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-948009916-150x120.jpg" align ="left"></a>10月15日，欧盟开始对原产地为中国的铝制品征收30.4%～48.0%的反倾销关税。2018年，美国发起对美中贸易战，也从提高钢铝税开始，欧洲正在循着与美国一样的路线，欧中贸易战烽烟已起。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 1:13 PM			</td></tr>
@@ -23,15 +28,12 @@
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12477926.md#1" target="_blank">【远见快评】亨特坑爹 拜登背后4重危机</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12477926.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/biden-on-climate-change-700x420-150x120.jpg" align ="left"></a>亨特·拜登“坑爹”邮件曝光，中共握拜登“命门”，拜登紧急改口背后4重危机。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 6:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12479147.md#1" target="_blank">石铭：枉法判决何时休？</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12479147.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/07/1-166-560x400-150x120.jpg" align ="left"></a>据明慧网近日报道：河北省围场满族蒙古族自治县十三名法轮功学员刘志峰、王永兴等被非法关押一年多，九月二十八日被滦平县法院非法开庭。两位维权律师从法律和道义角度做无罪辩护。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 5:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12479020.md#1" target="_blank">隋志：专家续公布报告 中共再隐匿疫情</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12479020.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/li_ming-Yan-600x400-150x120.jpg" align ="left"></a>今年以来，“武汉肺炎”（中共病毒，COVID-19）袭卷全球，已逾3800万人确诊，造成109万人死亡，疫情仍持续蔓延。九月十四日，逃亡美国的中国病毒学家闫丽梦发布首篇调查报告，指出病毒来自中共实验室且被故意释放。十月八日，她释出第二份报告指出，中共解放军在六个月内就能用模板病毒制造出COVID-19，因此疫情大流行是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 4:24 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12477636.md#1" target="_blank">张慧东：习近平此次高调南巡的背后</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12477636.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/80f597d84ae0b1cc7d0b0a8efd318635-600x400-1-150x120.png" align ="left"></a>10月11日，据中共党媒新华社报导，习近平将出席深圳纪念特区成立四十周年活动。对习近平此次高调南巡的报导与以往不同，中共党媒新华社竟一反常态，由事后报导改为提前两天向社会各界报导中共领导人行程，并直播习近平的讲话，引发外界猜测。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 3:30 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478902.md#1" target="_blank">美国中文教师：致中国人心灵的一封信</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478902.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/Screenshot-2020-10-15-at-19.46.56-150x120.png" align ="left"></a>海外的正义人士正在携手呼吁大陆14亿国人展开一场“中国人自救行动”——主动地选择改变，选择脱离中共，才是十四亿中国人躲过劫难、拥有未来的唯一出路。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 3:22 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478915.md#1" target="_blank">张菁：中共加入武汉肺炎疫苗实施计划的背后</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478915.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/shutterstock_249276148-150x120.jpg" align ="left"></a>10月9日，中共外交部发言人华春莹说，中国已于10月8日同全球疫苗免疫联盟签署协议，正式加入“新冠肺炎疫苗实施计划”（COVAX）。但这个时间却比COVAX规定的最后期限晚了20天。
-
-“新冠肺炎疫苗实施计划”（COVAX）由全球疫苗免疫联盟（Gavi）、世卫组织（WHO）和流行病防范创新联盟（CEPI）创建。
-.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 3:10 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478895.md#1" target="_blank">宋善：幻日异象 预告中共末日</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478895.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/23-1-600x400-1-150x120.jpg" align ="left"></a>二零二零年十月十五日，黑龙江省漠河市天空出现三个太阳的诡异景象。有谓肇因于大兴安岭近日降雪后气温骤降，致空气干冷，形成“幻日”。这种稀有奇观，现今专家无法做出令人信服的解释。黑龙江省九月遭逢台风，近日又降大雪，把已经成熟的水稻压趴在田里，农民欲哭无泪。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 2:48 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478267.md#1" target="_blank">【名家专栏】美大选两极对立：自由与暴政</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478267.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-150x120.jpg" align ="left"></a>选民对未来的看法决定着总统选举，而选择也从来没有像现在这样明确：拜登—哈里斯政府将对我们的司法、自由、经济和外交政策产生深远而激进的影响。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 2:26 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12476168.md#1" target="_blank">王友群：习近平“南巡”可推进“改革开放”吗</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12476168.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/80f597d84ae0b1cc7d0b0a8efd318635-600x400-1-150x120.png" align ="left"></a>10月13日，中共五中全会召开前夕，习近平开始了他上台以来的第三次“南巡”。10月14日，习在深圳特区成立40周年大会上发表讲话，称中共将“在更高起点上推进改革开放”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 1:42 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482660.md#1" target="_blank">海网：中共早就给拜登挖好坑了</a><br></h3>苟延忙把外势找，
+统战拜登贪战小。
+挖坑挖出坑爹鬼，
+白等拜登就拉倒？
+毁灭人类红邪灵，
+报应来了往哪跑？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 4:26 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481413.md#1" target="_blank">王友群：先帮中共使劲整人后被整死的吴晗</a><br></h3>吴晗在《朱元璋传》中写道：“网络布置好了，包围圈逐渐缩小了。苍鹰在天上盘旋，猎犬在地上追逐，一片号角声，呐喊声，呼鹰唤狗声，已入网的文人一个个断脰破胸，呻吟在血泊中。”这段话正是1949年中共夺取政权后对待文人的形象写照。
 吴晗背弃恩师投向中共
 吴晗，浙江金华义乌人，1928年秋，考入上海中国公学，成为胡适的学生.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 5:55 AM			</td></tr>
