--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/15/n11942655.md#1" target="_blank">毛泽东73岁生日自杀的周小舟</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
