--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11255006.md#1" target="_blank">【征文】凌晓辉：贞洁论（一）</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
