--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/15/n10145540.md#1" target="_blank">关敏：不许鼓吹“蒋经国时代”</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
