--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752825.md#1" target="_blank">共产暴政录：张国焘鄂豫皖根据地肃反</a></li><li><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
